# feldspar-io

./: .travis.yml  README.md  feldspar-io.cabal
examples/: Demo.hs  Misc.hs  Simple.hs
src/Feldspar/: Concurrent.hs  IO.hs
src/Feldspar/IO/: CMD.hs  Concurrent.hs  Frontend.hs  Internal.hs  Mutable.hs
tests/: Examples.hs
