name:                feldspar-io
version:             0.1
synopsis:            An "IO monad" for Feldspar
-- description:
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          emax@chalmers.se
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Feldspar.IO
    Feldspar.IO.CMD
    Feldspar.IO.Frontend
    Feldspar.IO.Mutable
    Feldspar.Concurrent

  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeOperators

  build-depends:
    array,
    base < 4.9,
    directory,
    feldspar-language,
    feldspar-compiler-shim,
    filepath,
    imperative-edsl,
    language-c-quote >= 0.11 && < 0.12,
    mainland-pretty >= 0.4 && < 0.5,
    operational-alacarte,
    process,
    time

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  default-extensions:
    ScopedTypeVariables

  other-modules:
    Simple

  build-depends:
    base,
    feldspar-io,
    feldspar-language,
    imperative-edsl
